# ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/rt/animations/: animation.hh  ease_in_out_animation.hh  linear_animation.hh  static_animation.hh
src/rt/common/: color.cc  color.hh  concepts.hh  exception.hh  image.cc  image.hh  strings.cc  strings.hh  xml.cc  xml.hh
src/rt/lights/: light.hh  point_light.cc
src/rt/loaders/: ambient_light_loader.cc  ambient_light_loader.hh  camera_loader.cc  camera_loader.hh  common.cc  common.hh  image_loader.cc  image_loader.hh  light_loader.cc  light_loader.hh  material_loader.cc  material_loader.hh  material_solid_loader.cc  material_solid_loader.hh  material_textured_loader.cc  material_textured_loader.hh  mesh_loader.cc  mesh_loader.hh  obj_loader.cc  obj_loader.hh  parallel_light_loader.cc  parallel_light_loader.hh  point_light_loader.cc  point_light_loader.hh  scene_loader.cc  scene_loader.hh  sphere_loader.cc  sphere_loader.hh  spot_light_loader.cc  spot_light_loader.hh  surface_loader.cc  surface_loader.hh  transformation_loader.cc  transformation_loader.hh
src/rt/material/: material_textured.cc  material_textured.hh
src/rt/math/: angle.hh  matrix4.hh  vector3.hh
src/rt/renderer/: intersection.hh  ray.hh  renderer.cc  renderer.hh
src/rt/scene/: camera.cc  camera.hh  scene.cc  scene.hh
src/rt/surfaces/: mesh.cc  mesh.hh  sphere.cc  sphere.hh  surface.cc  surface.hh  triangle.hh
src/rt/theater/: camera.cc  camera.hh  scene.cc  scene.hh
src/rt/transformations/: rotate_x.cc  rotate_x.hh  rotate_y.cc  rotate_y.hh  rotate_z.cc  rotate_z.hh  scale.cc  scale.hh  (+3 more)
(+25 files in other folders)
